--- a/client/client.html
+++ b/client/client.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>WebSocket Client Test</title>
 
+		<link rel="icon" href="data:;base64,=" />
 		<script type="text/javascript" src="client/main.js"></script>
 
 		<script
@@ -10,6 +11,8 @@
 			src="client/socketMain.js"
 			defer
 		></script>
+
+		<script type="text/javascript" src="client/rtc.js" defer></script>
 
 		<style>
 			button {
