--- a/client/client.html
+++ b/client/client.html
@@ -11,7 +11,7 @@
 
 		<script type="text/javascript" src="client/socket.js" defer></script>
 
-		<script type="text/javascript" src="client/http.js" defer></script>
+		<script type="text/javascript" src="client/rest.js" defer></script>
 
 		<script type="text/javascript" src="client/rtc.js" defer></script>
 	</head>
